// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOptions should allow methods to be changed 1`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;

exports[`buildOptions should overwrite defaults 1`] = `
Object {
  "debug": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "error": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "exception": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "info": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "log": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "warn": Object {
    "injectFileName": false,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 1`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 2`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 3`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 4`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": false,
    "injectVariableName": true,
    "useFileNameRelativeToProjectRoot": false,
  },
}
`;
